# resume-crawling

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: .env.supabase.example  README.md  pyproject.toml
apps/api/app/: __init__.py  bootstrap.py  config.py  database.py  main.py  models.py  schemas.py  security.py  seed.py
apps/api/app/api/routes/: applications.py  auth.py  calendar.py  dashboard.py  postings.py  resumes.py  sources.py
apps/api/app/crawlers/: base.py  jobkorea.py  jobkorea_filters.py  kofia.py  registry.py  remember.py
apps/api/app/scripts/: backfill_jobkorea_deadlines.py  ensure_performance_indexes.py  source_admin.py  sync_source.py
apps/api/app/services/: cache.py  sync.py  user_scope.py
apps/api/app/utils/: dates.py  text.py
apps/api/tests/: test_applications_library.py  test_auth_service.py  test_calendar_route.py  test_jobkorea_crawler.py  test_kofia_crawler.py  test_manual_entries.py  test_posting_flags.py  test_postings_query.py  test_read_cache.py  test_remember_crawler.py  test_seed.py  test_source_admin.py  test_sync_service.py  test_text_utils.py
apps/crawler-admin/: package.json
apps/crawler-admin/app/: globals.css  layout.tsx  page.tsx
apps/crawler-admin/components/: source-sync-console.tsx
apps/crawler-admin/lib/: data.ts  db.ts  format.ts  jobkorea.ts  python-cli.ts  remember.ts  types.ts
apps/web/: .env.local.example  README.md  package.json  proxy.ts
apps/web/app/: actions.ts  globals.css  layout.tsx  page.tsx
apps/web/components/: api-unavailable.tsx  empty-state.tsx  section-card.tsx  (+2 more)
(+65 files in other folders)
