[project]
name = "resume-workbench-api"
version = "0.1.0"
description = "Local-first API for job collection, resume management, and application tracking."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "beautifulsoup4>=4.13.5",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "sqlalchemy>=2.0.44",
  "uvicorn>=0.38.0"
]

[dependency-groups]
dev = [
  "pytest>=8.4.2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
